refactor: update dependencies and improve skill system structure