@@ -12,8 +12,8 @@ import io.github.minehollow.sdk.player.wallet.WalletService;
 import io.github.minehollow.sdk.server.GameServerService;
 import io.github.minehollow.sdk.util.address.HostAddress;
 import io.github.minehollow.sdk.util.property.Property;
-
 import lombok.extern.slf4j.Slf4j;
+
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 
@@ -23,23 +23,18 @@ public abstract class AbstractPlatform implements Platform {
         // gambiarra para carregar tudo do .env no sistema
         Dotenv.configure().systemProperties().load();
     }
-    
-    private static final ExecutorService ASYNC_EXECUTOR = Executors.newFixedThreadPool(Math.max(4, Runtime.getRuntime().availableProcessors()), r -> {
-        Thread t = new Thread(r);
-        t.setName("wallet-async-" + t.getId());
-        t.setDaemon(true);
-        return t;
-    });
-    
+
+    private static final ExecutorService ASYNC_EXECUTOR = Executors.newVirtualThreadPerTaskExecutor();
+
     private static AbstractPlatform instance;
     protected final HostAddress hostAddress;
-    
+
     protected final RedisConnector redisConnector;
     protected final MongoDbConnector mongoDbConnector;
     protected final ExecutorService executorService;
-    
+
     protected final NetworkClient networkClient;
-    
+
     protected final GameServerService gameServerService;
     protected final PlayerAccountService playerAccountService;
     protected final GroupPermissionService groupPermissionService;
@@ -49,11 +44,11 @@ public abstract class AbstractPlatform implements Platform {
     public AbstractPlatform(HostAddress hostAddress) {
         instance = this;
         this.hostAddress = hostAddress;
-        
+
         this.redisConnector = RedisConnector.getInstance();
         this.mongoDbConnector = MongoDbConnector.getInstance();
         this.executorService = ASYNC_EXECUTOR;
-        
+
         this.networkClient = new NetworkClient(this, hostAddress, executorService);
         this.gameServerService = new GameServerService(redisConnector);
         this.playerAccountService = PlayerAccountService.of(executorService);
@@ -61,7 +56,7 @@ public abstract class AbstractPlatform implements Platform {
         this.walletService = new WalletService(this, executorService);
         this.playerDiscordService = new PlayerDiscordService(executorService);
     }
-    
+
     protected void loadGroupPermissions() {
         for (PlayerGroup group : PlayerGroup.BY_ID.values()) {
             groupPermissionService.loadPermissions(group, true).whenComplete((found, error) -> {
@@ -75,44 +70,55 @@ public abstract class AbstractPlatform implements Platform {
             });
         }
     }
-    
+
     @Override
     public String getId() {
-        return Property.getOrThrow("PLATFORM_ID", () -> new IllegalStateException("Propriedade 'PLATFORM_ID' não definida verifique seu arquivo '.env'"));
+        final var fromPlatformEnv = Property.get("PLATFORM_ID");
+        if (fromPlatformEnv != null && !fromPlatformEnv.isBlank()) {
+            return fromPlatformEnv;
+        }
+
+        final var fromSystem = System.getenv("P_SERVER_UUID");
+        if (fromSystem != null && !fromSystem.isBlank()) {
+            // we get the first part before the hyphen
+            return fromSystem.split("-")[0];
+        }
+
+        throw new IllegalStateException("Platform ID not defined in environment variables.");
     }
-    
+
     public static Platform getInstance() {
         if (instance == null) {
             throw new IllegalStateException("Platform instance has not been initialized yet.");
         }
         return instance;
     }
-    
+
     @Override
     public GameServerService getGameServerService() {
         return gameServerService;
     }
-    
+
     @Override
     public PlayerAccountService getPlayerAccountService() {
         return playerAccountService;
     }
-    
+
     @Override
     public GroupPermissionService getGroupPermissionService() {
         return groupPermissionService;
     }
-    
+
     @Override
     public WalletService getWalletService() {
         return walletService;
     }
-    
+
     @Override
     public NetworkClient getNetworkClient() {
         return networkClient;
     }
-    
+
     @Override
     public ExecutorService getExecutorService() {
         return ASYNC_EXECUTOR;
